agregando chart pivot para OIM

--- a/core/templates/oimpiechart.html
+++ b/core/templates/oimpiechart.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     {% load chartit %}
-    {{ charts|load_charts:"asignado,ejecutado" }}
+    {{ charts|load_charts:"asignado,ejecutado,asignado_barra" }}
     <div id='asignado'> Chart will be rendered here </div>
     <div id='ejecutado'> Chart will be rendered here </div>
 
