--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,197 +1,121 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no.js' %}"> <!--<![endif]-->
 {% load staticfiles %}
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Inicio | Presupuesto Municipal</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    {% load staticfiles %}
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Carousel Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-responsive.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/extras.css' %}">
-    <link rel="stylesheet" href="{% static 'css/sl-slide.css' %}">
 
-    <script src="{% static 'js/vendor/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{% static 'images/ico/favicon.ico' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'images/ico/apple-touch-icon-144-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'images/ico/apple-touch-icon-114-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'images/ico/apple-touch-icon-72-precomposed.png' %}">
-    <link rel="apple-touch-icon-precomposed" href="{% static 'images/ico/apple-touch-icon-57-precomposed.png' %}">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <script src="{% static 'jquery-1.11.2.min.js' %}"></script>
     <script src="{% static 'highcharts.js' %}"></script>
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
 
-<script type="text/javascript"> 
-
-</script>
-</head>
-
-<body>
-
-    <!--Header-->
-    <header class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <h2 style="margin-top: 30px;"><a class="pull-left" href="index.html" style="color: #999;">{% block titulo %} {% endblock %}</a></h2>
-                <div class="nav-collapse collapse pull-right">
-                    <ul class="nav">
-                        <li class="active"><a href="/">Inicio</a></li>
-                        <li><a href="about-us.html">Acerca de</a></li>
-                        <li><a href="services.html"></a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Presupuesto <i class="icon-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="">Presupuesto aprobado</a></li>
-                                <li><a href="">Origen de los recursos</a></li>
-                                <li><a href="">Gasto ejecutado</a></li>
-                                <li><a href="">Inversiones ejecutadas</a></li>
-                                <li><a href="">Distribucion territorial de los recursos</a></li>
-                                <li><a href="">Distribucion sectorial de los recursos</a></li>
-                                <li><a href="#">Proyectos</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="">Proyectos</a></li>
-                        <li><a href="contact-us.html">Contactenos</a></li>
-                        <li class="login">
-                            <a data-toggle="modal" href="#loginForm"><i class="icon-lock"></i></a>
-                        </li>
-                    </ul>        
-                </div><!--/.nav-collapse -->
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <h2><a href="#">{% block titulo %} {% endblock %}</a></h2>
             </div>
-        </div>
-    </header>
-    <!-- /header -->
+            <div id="navbar" class="navbar-collapse collapse pull-right">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">INICIO</a></li>
+                <li><a href="#about">ACERCA DE</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTO <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                  </ul>
+                </li>
+                <li><a href="#contact">PROYECTOS</a></li>
+                <li><a href="#contact">CONTACTENOS</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-<!--banner de portada -->
-{% block slide_portada %}
-{% endblock %}
-<!--finaliza banner de portada -->
+      </div>
+    </div>
 
-<!--Cajas de colores de portada -->
-{% block cajas_portada %}
-{% endblock %}
-<!--Fin de cajas de colores de portada -->
 
-<!--graficos-->
-<section id="graficos-portada">
-    <div class="container">
-        <div class="row-fluid">
-        {% block main_content %}
-        {% endblock %}
+    <!-- Carousel
+    ================================================== -->
+    {% block slide_portada %}
+    {% endblock %}
+
+    <!--Cajas de colores de portada -->
+    {% block cajas_portada %}
+    {% endblock %}
+    <!--Fin de cajas de colores de portada -->
+
+    <!--graficos-->
+    <section id="graficos">
+      <div class="container">
+	    <div class="row text-center">
+            <div class="row-fluid">
+              {% block main_content %}
+              {% endblock %}
+	        </div>
 	    </div>
-	</div>
-</section>
+      </div>
+    </section>
 
-{% block inversiones_portada %}
+    {% block inversiones_portada %}
+    {% endblock %}
 
-{% endblock %}
 
-<!--Bottom-->
-<section id="bottom" class="main">
-    <!--Container-->
-    <div class="container">
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
 
-        <!--row-fluids-->
-        <div class="row-fluid">
+    </div><!-- /.container -->
 
-        </div>
 
-    </div>
-    <!--/row-fluid-->
-</div>
-<!--/container-->
-
-</section>
-<!--/bottom-->
-
-<!--Footer-->
-<footer id="footer">
-    <div class="container">
-        <div class="row-fluid">
-            <div class="span5 cp">
-                &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
-            </div>
-            <!--/Copyright-->
-
-            <div class="span6">
-                <ul class="social pull-right">
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-pinterest"></i></a></li>
-                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="#"><i class="icon-google-plus"></i></a></li>                       
-                    <li><a href="#"><i class="icon-youtube"></i></a></li>
-                    <li><a href="#"><i class="icon-tumblr"></i></a></li>                        
-                    <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                    <li><a href="#"><i class="icon-rss"></i></a></li>
-                    <li><a href="#"><i class="icon-github-alt"></i></a></li>
-                    <li><a href="#"><i class="icon-instagram"></i></a></li>                   
-                </ul>
-            </div>
-
-            <div class="span1">
-                <a id="gototop" class="gototop pull-right" href="#"><i class="icon-angle-up"></i></a>
-            </div>
-            <!--/Goto Top-->
-        </div>
-    </div>
-</footer>
-<!--/Footer-->
-
-<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
-<!-- Required javascript files for Slider -->
-<script src="{% static 'js/jquery.ba-cond.min.js' %}"></script>
-<script src="{% static 'js/jquery.slitslider.js' %}"></script>
-<script src="http://code.highcharts.com/highcharts-3d.js"></script>
-
-<!-- /Required javascript files for Slider -->
-
-<!-- SL Slider -->
-<script type="text/javascript"> 
-$(function() {
-    var Page = (function() {
-
-        var $navArrows = $( '#nav-arrows' ),
-        slitslider = $( '#slider' ).slitslider( {
-            autoplay : true
-        } ),
-
-        init = function() {
-            initEvents();
-        },
-        initEvents = function() {
-            $navArrows.children( ':last' ).on( 'click', function() {
-                slitslider.next();
-                return false;
-            });
-
-            $navArrows.children( ':first' ).on( 'click', function() {
-                slitslider.previous();
-                return false;
-            });
-        };
-
-        return { init : init };
-
-    })();
-
-    Page.init();
-});
-</script>
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/docs.min.js' %}"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    <script src="http://code.highcharts.com/highcharts-3d.js"></script>
+  </body>
 </html>
