--- a/core/templates/gpersonal.html
+++ b/core/templates/gpersonal.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>{{title}}</title>
-{% load static %}
-    <script src="/static/jquery-1.11.2.min.js"></script>
-    <script src="/static/highcharts.js"></script>
-</head>
-<body>
-    {% load chartit %}
-    {{ charts|load_charts:"chart" }}
-    <div id='chart'> Chart will be rendered here </div>
-
+{% extends "base.html" %}
+{% load static thumbnail chartit %}
+{% block main_content %}
     <form method="GET">
     <select name="municipio">
     <option value="">--</option>
@@ -22,6 +10,6 @@
     </select>
     <input type="submit" value="Submit"/>
     </form>
-
-</body>
-</html>
+    {{ charts|load_charts:"chart" }}
+    <div id='chart'> Chart will be rendered here </div>
+{% endblock %}
