--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>{{title}}</title>
-{% load static %}
-    <script src="/static/jquery-1.11.2.min.js"></script>
-    <script src="/static/highcharts.js"></script>
-</head>
-<body>
-    {% load chartit %}
-    {{ charts|load_charts:"asignado,ejecutado" }}
-    <div id='asignado'> Chart will be rendered here </div>
-    <div id='ejecutado'> Chart will be rendered here </div>
-
+{% extends "base.html" %}
+{% load static thumbnail chartit %}
+{% block main_content %}
     <form method="GET">
     <select name="year">
     {% for year in year_list %}
@@ -29,6 +16,7 @@
     <input type="submit" value="Submit"/>
     </form>
 
-    <div id='asignado_barra'> Chart will be rendered here </div>
-</body>
-</html>
+    {{ charts|load_charts:"asignado,ejecutado" }}
+    <div id='asignado'> Chart will be rendered here </div>
+    <div id='ejecutado'> Chart will be rendered here </div>
+{% endblock %}
