--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <h2><a href="#">{% block titulo %} {% endblock %}</a></h2>
+              <h2><a href="#">Presupuesto Municipal {% block titulo %} {% endblock %}</a></h2>
             </div>
             <div id="navbar" class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
@@ -54,13 +54,19 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTO <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</a></li>
+                    <li><a href="{%url 'origen_gastos'%}">Origen de gastos del municipio</a></li>
                     <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
+                    <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
+                    <li><a href="{%url 'autonomia_gastos'%}">Autonomía para asumir gastos operativos</a></li>
+                    <li><a href="{%url 'ahorro_corriente'%}">Ahorro corriente para inversiones</a></li>
+                    <li><a href="{%url 'peso_deuda'%}">Peso del servicio de la deuda</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li>
+                    <li><a href="{%url 'inversion_area'%}">Distribuci&oacuteln de la inversión por área</a></li>
+                    <li><a href="{%url 'inversion'%}">Inversión</a></li>
+                    <li><a href="{%url 'inversion_categoria'%}">Inversión por categoría</a></li>
                   </ul>
                 </li>
                 <li><a href="#contact">PROYECTOS</a></li>
@@ -85,7 +91,7 @@
     <!--Fin de cajas de colores de portada -->
 
     <!--graficos-->
-    <section id="graficos">
+    <section id="graficos" class="inside">
       <div class="container">
 	    <div class="row text-center">
             <div class="row-fluid">
