--- a/core/templates/municipio.html
+++ b/core/templates/municipio.html
@@ -2,7 +2,7 @@
 {% load static thumbnail chartit %}
 
 {% block titulo %}
-Presupuesto Municipal: {{ obj.nombre }}
+{{ obj.nombre }}
 {% endblock %}
 
 {% block slide_portada %}
