insertar graficos de inversion por año y por área en portada

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -198,7 +198,10 @@
                         <div class="carousel-inner" role="listbox">
                             <div class="item inversion active text-center">
                                 <ul class="thumbnails">
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/puente-caminos.jpg" class="img-responsive">Caminos, puentes y alcantarillados</a><p>57%</p></li>
+                                    <li class="col-md-3 col-sm-3 col-xs-6">
+                                      <div class="circular" style="background: url('static/img/test.png') no-repeat;"></div>
+                                      <a href="#">Caminos, puentes y alcantarillados</a><p>57%</p>
+                                    </li>
                                     <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/calles-aceras.jpg" class="img-responsive">Calles, aceras y andenes</a><p>37%</p></li>
                                     <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/fortalecimiento.jpg" class="img-responsive">Fortalecimiento institucional</a><p>4%</p></li>
                                     <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/vivienda.jpg" class="img-responsive">Viviendas</a><p>1%</p></li>
