graficos en portada y reparando graficos independientes

--- a/core/templates/municipio.html
+++ b/core/templates/municipio.html
@@ -181,7 +181,7 @@
 	<div class="col-md-12">
 	    <div class="col-md-6">
 		<div class="panel panel-primary">
-			<div class="panel-heading"><h3>Distribucion por sector</h3></div>
+			<div class="panel-heading"><h3>Distribucion por &aacute;</h3></div>
 			<div class="panel-body">
               <div id='inversion_area'>
               </div>
