--- a/core/templates/municipio.html
+++ b/core/templates/municipio.html
@@ -24,7 +24,6 @@
               <div class="carousel-caption">
                 <h1>{{ banner.titulo }}</h1>
                 <p>{{ banner.descripcion }}</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
               </div>
             </div>
           </div>
@@ -33,7 +32,7 @@
     </div><!-- /.carousel -->
 {% endblock %}
 {% block cajas_portada %}
-    <section id="recuadros">
+    <section id="recuadros" style="margin-bottom: -60px;">
       <div class="container">
         <div class="row-fluid">
               <button class="col-md-2 col-sm-4 col-xs-12 btn btn-primary">
@@ -66,14 +65,19 @@
 {% block main_content %}
         {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area" }}
         <div class="col-md-4 col-sm-4">
+          <h2>Cuanto ingresa?</h2>
           <div id='oim_ejecutado'>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
+          <h2>En que se gasta?</h2>
           <div id='ogm_ejecutado'>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <h2>Fuentes de Financiamient</h2>
         </div>
 {% endblock %}
 
@@ -183,7 +187,7 @@
 	<div class="col-md-12">
 	    <div class="col-md-6">
 		<div class="panel panel-primary">
-			<div class="panel-heading"><h3>Distribucion por &aacute;</h3></div>
+			<div class="panel-heading"><h3>Distribucion por &aacute;rea</h3></div>
 			<div class="panel-body">
               <div id='inversion_area'>
               </div>
