--- a/core/templates/gpersonal.html
+++ b/core/templates/gpersonal.html
@@ -10,6 +10,7 @@
     </select>
     <input type="submit" value="Submit"/>
     </form>
-    {{ charts|load_charts:"chart" }}
+    {{ charts|load_charts:"chart,chart_ejecutado" }}
     <div id='chart'> Chart will be rendered here </div>
+    <div id='chart_ejecutado'> Chart will be rendered here </div>
 {% endblock %}
