--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,181 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+{% extends "base.html" %}
+{% load static thumbnail chartit %}
 
-    <title>Carousel Template for Bootstrap</title>
+{% block titulo %}
+{{ obj.nombre }}
+{% endblock %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="static/assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
-    <link href="static/css/carousel.css" rel="stylesheet">
-    <link href="static/css/custom.css" rel="stylesheet">
-  </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Transparencia Municipal Acoyapa</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <h2><a href="#">Presupuesto Municipal Acoyapa</a></h2>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse pull-right">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">INICIO</a></li>
-                <li><a href="#about">ACERCA DE</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTO <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-                <li><a href="#contact">PROYECTOS</a></li>
-                <li><a href="#contact">CONTACTENOS</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
-      </div>
-    </div>
-
-
-    <!-- Carousel
-    ================================================== -->
+{% block slide_portada %}
     <div id="myCarousel2" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel2" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel2" data-slide-to="1"></li>
-        <li data-target="#myCarousel2" data-slide-to="2"></li>
+        {% for banner in banners %}
+          <li data-target="#myCarousel2" data-slide-to="{{forloop.counter0}}" {% if forloop.first %} class="active"{% endif%}></li>
+        {% endfor %}
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="static/img/granada.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+        {% for banner in banners %}
+          <!--Slider Item{{ banners.count }}-->
+          <div class="item{% if forloop.first %} active{% endif%}">
+            {% thumbnail banner.imagen "1600x400" crop='center' as img %}
+              <img src="{{ img.url }}" class="pull-right" alt="{{ banner }}" />
+            {% endthumbnail %}
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>{{ banner.titulo }}</h1>
+                <p>{{ banner.descripcion }}</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div><!-- /.carousel -->
-
-    <section id="recuadros">
+{% endblock %}
+{% block cajas_portada %}
+    <section id="recuadros" style="margin-bottom: -60px;">
       <div class="container">
-        <div class="row-fluid col-md-3 col-xs-6">
-            <button class="col-md-3 btn btn-primary">
-                <img src="static/img/burbuja.png"  class="pull-left img-responsive"/>
-                <h3>Item 1</h3>
+        <div class="row-fluid">
+              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-primary">
+                <i class="fa fa-street-view fa-4x pull-left"></i>
+                <h3>Poblaci&oacute;n</h3>
                 <span class="cifra">50%</span>
-            </button>
-            <button class="col-md-3 col-xs-6 btn btn-success">
-                <img src="static/img/calendar.png"  class="pull-left img-responsive"/>
+              </button>
+              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-success">
+                <i class="fa fa-building fa-4x pull-left"></i>
                 <h3>Item 2</h3>
                 <span class="cifra">50%</span>
-            </button>
-            <button class="col-md-3 col-xs-6 btn btn-info">
-                <img src="static/img/dolar.png" width="70" align="left"/>
+              </button>
+              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-danger">
+                <i class="fa fa-child fa-4x pull-left"></i>
                 <h3>Item3</h3>
                 <span class="dolar"></span>
                 <span class="cifra">50%</span>
-            </button>
-            <button class="col-md-3 btn btn-danger">
-                <img src="static/img/comment.png" width="70" align="left"/>
-                <h3>Item 4</h3>
+              </button>
+              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-info">
+                <i class="fa fa-child fa-4x pull-left"></i>
+                <h3>Item3</h3>
                 <span class="dolar"></span>
                 <span class="cifra">50%</span>
-            </button>
+              </button>
         </div>
       </div>
     </section>
+{% endblock %}
 
-    <section id="graficos">
-        <div class="container">
-	    <div class="row text-center">
-                <div class="col-md-4 col-sm-4">
-                    <h2>Cuanto ingresa?</h2>
-                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-                    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                </div><!-- /.col-md-4 -->
-                <div class="col-md-4 col-sm-4">
-                    <h2>En que se gasta?</h2>
-                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                </div><!-- /.col-md-4 -->
-                <div class="col-md-4 col-sm-4">
-                  <h2>Fuentes de Financiamiento</h2>
-                  <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-                  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                  <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                </div><!-- /.col-md-4 -->
-            </div><!-- /.row -->
+{% block main_content %}
+        {{ charts|load_charts:"oim_ejecutado, ogm_ejecutado, inversion, inversion_area" }}
+        <div class="col-md-4 col-sm-4">
+          <h2>Cuanto ingresa?</h2>
+          <div id='oim_ejecutado'>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          </div>
         </div>
-    </section>
+        <div class="col-md-4 col-sm-4">
+          <h2>En que se gasta?</h2>
+          <div id='ogm_ejecutado'>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-4">
+          <h2>Fuentes de Financiamient</h2>
+        </div>
+{% endblock %}
 
+{% block inversiones_portada %}
     <section id="inversiones" class="main">
         <div class="container">
             <div class="row">
@@ -196,25 +102,22 @@
                             <li data-target="#carousel-inv" data-slide-to="1"></li>
                         </ul>
                         <div class="carousel-inner" role="listbox">
-                            <div class="item inversion active text-center">
+
+                        {% for i in inversion_categoria %}
+                            {% if forloop.first or forloop.counter0|divisibleby:4 %}
+                            <div class="item inversion {% if forloop.first %}active{% endif %} text-center">
                                 <ul class="thumbnails">
-                                    <li class="col-md-3 col-sm-3 col-xs-6">
-                                      <div class="circular" style="background: url('static/img/test.png') no-repeat;"></div>
-                                      <a href="#">Caminos, puentes y alcantarillados</a><p>57%</p>
-                                    </li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/calles-aceras.jpg" class="img-responsive">Calles, aceras y andenes</a><p>37%</p></li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/fortalecimiento.jpg" class="img-responsive">Fortalecimiento institucional</a><p>4%</p></li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/vivienda.jpg" class="img-responsive">Viviendas</a><p>1%</p></li>
+                            {% endif %}
+                                <li class="col-md-3 col-sm-3 col-xs-6">
+                                  <div class="circular {{ i.catinversion__slug }}" style="background: url('{% static 'img/'|add:i.catinversion__slug|add:'.png' %}') no-repeat;" class="img-responsive" ></div>
+                                  <a href="#">{{ i.catinversion__nombre }}</a>
+                                  <p>{% widthratio i.ejecutado total_inversion.ejecutado 100 %}%</p>
+                                </li>
+                            {% if forloop.last or forloop.counter|divisibleby:4 %}
                                 </ul>
                             </div>
-                            <div class="item inversion">
-                                <ul class="thumbnails text-center">
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/puente-caminos.jpg" class="img-responsive">Caminos, puentes y alcantarillados</a><p>57%</p></li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/calles-aceras.jpg" class="img-responsive">Calles, aceras y andenes</a><p>37%</p></li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/fortalecimiento.jpg" class="img-responsive">Fortalecimiento institucional</a><p>4%</p></li>
-                                    <li class="col-md-3 col-sm-3 col-xs-6"><a href="#"><img src="static/img/vivienda.jpg" class="img-responsive">Viviendas</a><p>%</p></li>
-                                </ul>
-                            </div>
+                            {% endif %}
+                        {% endfor %}
                         </div>
                         <a class="left carousel-control" href="#carousel-inv" role="button" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -284,9 +187,10 @@
 	<div class="col-md-12">
 	    <div class="col-md-6">
 		<div class="panel panel-primary">
-			<div class="panel-heading"><h3>Distribucion por sector</h3></div>
+			<div class="panel-heading"><h3>Distribucion por &aacute;rea</h3></div>
 			<div class="panel-body">
-	        	    <img src="static/img/grafico-barras.png" width="500" />
+              <div id='inversion_area'>
+              </div>
 			</div>
 		</div>
 	    </div>
@@ -294,33 +198,12 @@
 		<div class="panel panel-success">
 			<div class="panel-heading"><h3>Comportamiento del presupuesto</h3></div>
 			<div class="panel-body">
-	        	    <img src="static/img/grafico-barras.png" width="500" />
+              <div id='inversion'>
+              </div>
 			</div>
 	    </div>	
 	</div>
     </div>
    </section>
 
-
-
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="static/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+{% endblock %}
