Agregando titulos a cajas de portada y corrigiendo titulo de graficos de fuente de financiamiento

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -35,27 +35,27 @@
     <section id="recuadros" style="margin-bottom: -60px;">
       <div class="container">
         <div class="row-fluid">
-              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-primary">
-                <i class="fa fa-street-view fa-4x pull-left"></i>
-                <h3>Poblaci&oacute;n</h3>
-                <span class="cifra">50%</span>
+              <button class="recuadro col-sm-4 col-xs-12 btn btn-primary">
+                <i class="fa fa-street-view fa-3x pull-left"></i>
+                <h4>Marco Legal</h4>
+                <span class="cifra">Municipal</span>
               </button>
-              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-success">
-                <i class="fa fa-building fa-4x pull-left"></i>
-                <h3>Item 2</h3>
-                <span class="cifra">50%</span>
+              <button class="recuadro col-sm-4 col-xs-12 btn btn-success">
+                <i class="fa fa-building fa-3x pull-left"></i>
+                <h4>Ciclo Presupuestario</h4>
+                <span class="cifra">Municipal</span>
               </button>
-              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-danger">
-                <i class="fa fa-child fa-4x pull-left"></i>
-                <h3>Item3</h3>
+              <button class="recuadro col-sm-4 col-xs-12 btn btn-danger">
+                <i class="fa fa-child fa-3x pull-left"></i>
+                <h4>Analisis Presupuestario</h4>
                 <span class="dolar"></span>
-                <span class="cifra">50%</span>
+                <span class="cifra">Municipal</span>
               </button>
-              <button class="col-md-2 col-sm-4 col-xs-12 btn btn-info">
-                <i class="fa fa-child fa-4x pull-left"></i>
-                <h3>Item3</h3>
+              <button class="recuadro col-sm-4 col-xs-12 btn btn-info">
+                <i class="fa fa-child fa-3x pull-left"></i>
+                <h4>Participacion Ciudadana</h4>
                 <span class="dolar"></span>
-                <span class="cifra">50%</span>
+                <span class="cifra">Gestion Municipal</span>
               </button>
         </div>
       </div>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <h2>Fuentes de Financiamient</h2>
+          <h2>Fuentes de Financiamiento</h2>
         </div>
 {% endblock %}
 
