--- a/core/templates/municipio.html
+++ b/core/templates/municipio.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <h2>Fuentes de Financiamient</h2>
+          <h2>Fuentes de Financiamiento</h2>
         </div>
 {% endblock %}
 
